Menambahkan beberapa kelas

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -9,7 +9,11 @@
     </head>
     <body>
         <header>
-            
+            <img src="{{ url_for('static', filename='images/logo.png') }}" class="header-logo">
+            <h1 class="header-title">15 Puzzle Solver</h1>
         </header>
+        <div class="container">
+            
+        </div>
     </body>
 </html>
