--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -6,7 +6,7 @@
         <title>15 Puzzle Solver</title>
         <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles/stylesheet.css') }}">
         <link rel="icon" type="image/png" href="{{ url_for('static', filename='images/logo.png') }}">
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+        <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     </head>
     <body>
         <header>
@@ -16,5 +16,8 @@
         <div class="container">
             
         </div>
+        <footer>
+            
+        </footer>
     </body>
 </html>
