--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -10,7 +10,7 @@
     </head>
     <body>
         <header>
-            <img src="{{ url_for('static', filename='images/logo.png') }}" class="header-logo">
+            <!-- <img src="{{ url_for('static', filename='images/logo.png') }}" class="header-logo"> -->
             <h1 class="header-title">15 Puzzle Solver</h1>
         </header>
         <div class="container">
