--- a/src/templates/view.html
+++ b/src/templates/view.html
@@ -5,10 +5,11 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>15 Puzzle Solver</title>
         <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles/stylesheet.css') }}">
+        <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles/stylesheet.css') }}">
         <link rel="icon" type="image/png" href="{{ url_for('static', filename='images/logo.png') }}">
         <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-        <script type="text/javascript" src="{{ url_for('static', filename='js/preview.js') }}"></script>
-        <script type="text/javascript" src="{{ url_for('static', filename='js/submit.js') }}"></script>
+        <script type="text/javascript" src="{{ url_for('static', filename='js/clear.js') }}"></script>
+        <script type="text/javascript" src="{{ url_for('static', filename='js/replay.js') }}"></script>
     </head>
     <body>
         <header>
@@ -16,10 +17,7 @@
             <h1 class="header-title">15 Puzzle Solver</h1>
         </header>
         <div class="container">
-            <form class="submission-form" id="submission-form" enctype="multipart/form-data">
-                <input type="file" name="file" class="file-input-button" accept=".txt" required>
-                <button type="submit" class="file-submit-button" id="file-submit-button">Upload</button>
-            </form>
+
         </div>
         <footer>
             
