--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -7,8 +7,8 @@
         <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles/stylesheet.css') }}">
         <link rel="icon" type="image/png" href="{{ url_for('static', filename='images/logo.png') }}">
         <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-        <script type="text/javascript" src="{{ url_for('static', filename='js/preview.js') }}"></script>
-        <script type="text/javascript" src="{{ url_for('static', filename='js/submit.js') }}"></script>
+        <script type="text/javascript" src="{{ url_for('static', filename='js/upload.js') }}"></script>
+        <script type="text/javascript" src="{{ url_for('static', filename='js/clear.js') }}"></script>
     </head>
     <body>
         <header>
@@ -16,13 +16,14 @@
             <h1 class="header-title">15 Puzzle Solver</h1>
         </header>
         <div class="container">
-            <form class="submission-form" id="submission-form" enctype="multipart/form-data">
+            <form class="submission-form" enctype="multipart/form-data">
                 <input type="file" name="file" class="file-input-button" accept=".txt" required>
-                <button type="submit" class="file-submit-button" id="file-submit-button">Upload</button>
+                <button type="submit" class="file-submit-button">Upload</button>
             </form>
+            <button type="button" class="file-clear-button">Clear</button>
         </div>
         <footer>
-            
+            <p>Made by 13520065 Rayhan Kinan Muhannad</p>
         </footer>
     </body>
 </html>
