--- a/src/templates/view.html
+++ b/src/templates/view.html
@@ -5,7 +5,6 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>15 Puzzle Solver</title>
         <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles/stylesheet.css') }}">
-        <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles/stylesheet.css') }}">
         <link rel="icon" type="image/png" href="{{ url_for('static', filename='images/logo.png') }}">
         <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
         <script type="text/javascript" src="{{ url_for('static', filename='js/clear.js') }}"></script>
@@ -20,7 +19,7 @@
 
         </div>
         <footer>
-            
+            <p>Made by 13520065 Rayhan Kinan Muhannad</p>
         </footer>
     </body>
 </html>
