--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -9,6 +9,7 @@
         <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
         <script type="text/javascript" src="{{ url_for('static', filename='js/upload.js') }}"></script>
         <script type="text/javascript" src="{{ url_for('static', filename='js/clear.js') }}"></script>
+        <script type="text/javascript" src="{{ url_for('static', filename='js/calculate.js') }}"></script>
     </head>
     <body>
         <header>
@@ -21,6 +22,10 @@
                 <button type="submit" class="file-submit-button">Upload</button>
             </form>
             <button type="button" class="file-clear-button">Clear</button>
+            <button type="button" class="calculate-button">Calculate</button>
+            <table>
+                
+            </table>
         </div>
         <footer>
             <p>Made by 13520065 Rayhan Kinan Muhannad</p>
