--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -23,7 +23,7 @@
             </form>
             <button type="button" class="file-clear-button">Clear</button>
             <button type="button" class="calculate-button">Calculate</button>
-            <table>
+            <table class="puzzle-table">
                 {% for i in range(nRow) %}
                     <tr>
                         {% for j in range(nCol)%}
