--- a/src/templates/view.html
+++ b/src/templates/view.html
@@ -7,6 +7,7 @@
         <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles/stylesheet.css') }}">
         <link rel="icon" type="image/png" href="{{ url_for('static', filename='images/logo.png') }}">
         <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+        <script type="text/javascript" src="{{ url_for('static', filename='js/back.js') }}"></script>
     </head>
     <body>
         <header>
@@ -14,7 +15,18 @@
             <h1 class="header-title">15 Puzzle Solver</h1>
         </header>
         <div class="container">
-
+            {% for matrix in pathOfStringMatrix %}
+                <table class="puzzle-table">
+                    {% for i in range(nRow) %}
+                        <tr>
+                            {% for j in range(nCol)%}
+                                <td>{{ matrix[i, j] if matrix[i, j] != None else "-" }}</td>
+                            {% endfor %}
+                        </tr>
+                    {% endfor %}
+                </table>
+            {% endfor %}
+            <button type="button" class="back-button">Back</button>
         </div>
         <footer>
             <p>Made by 13520065 Rayhan Kinan Muhannad</p>
