--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -19,9 +19,9 @@
         <div class="container">
             <table class="puzzle-table">
                 {% for i in range(nRow) %}
-                    <tr>
+                    <tr class="row">
                         {% for j in range(nCol)%}
-                            <td>{{ matrix[i, j] if matrix[i, j] != None else "-" }}</td>
+                            <td class="element">{{ matrix[i, j] if matrix[i, j] != None else "-" }}</td>
                         {% endfor %}
                     </tr>
                 {% endfor %}
@@ -34,7 +34,7 @@
             <button type="button" class="calculate-button">Calculate</button>
         </div>
         <footer>
-            <p>Made by 13520065 Rayhan Kinan Muhannad</p>
+            <p class="footer-label">Made by 13520065 Rayhan Kinan Muhannad</p>
         </footer>
     </body>
 </html>
