--- a/src/templates/puzzle.html
+++ b/src/templates/puzzle.html
@@ -2,9 +2,11 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>15 Puzzle</title>
-        <script type="text/javascript" src="{{ url_for('static', filename='js/puzzle.js') }}"></script>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>15 Puzzle Solver</title>
+        <link rel="icon" type="image/png" href="{{ url_for('static', filename='images/logo.png') }}">
         <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles/stylesheet.css') }}">
+        <script type="text/javascript" src="{{ url_for('static', filename='js/puzzle.js') }}"></script>
     </head>
     <body onload="start()"></body>
 </html>
