--- a/src/templates/view.html
+++ b/src/templates/view.html
@@ -16,7 +16,7 @@
         </header>
         <div class="container">
             <div class="board"></div>
-            <p class="jumlah-kurang-x-label"></p>
+            <p class="nilai-kurang-x-label"></p>
             <p class="jumlah-node-label"></p>
             <p class="waktu-eksekusi-label"></p>
             <button type="button" class="back-button">Back</button>
