--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -11,11 +11,11 @@
     </head>
     <body>
         <header>
-            <!-- <img src="{{ url_for('static', filename='images/logo.png') }}" class="header-logo"> -->
+            <img src="{{ url_for('static', filename='images/logo.png') }}" class="header-logo">
             <h1 class="header-title">15 Puzzle Solver</h1>
         </header>
+        <div class="board"></div>
         <div class="container">
-            <div class="board"></div>
             <form class="submission-form" enctype="multipart/form-data">
                 <input type="file" name="file" class="file-input-button" accept=".txt" required>
                 <button type="submit" class="file-submit-button">Upload</button>
