--- a/src/templates/view.html
+++ b/src/templates/view.html
@@ -11,11 +11,11 @@
     </head>
     <body>
         <header>
-            <!-- <img src="{{ url_for('static', filename='images/logo.png') }}" class="header-logo"> -->
+            <img src="{{ url_for('static', filename='images/logo.png') }}" class="header-logo">
             <h1 class="header-title">15 Puzzle Solver</h1>
         </header>
+        <div class="board"></div>
         <div class="container">
-            <div class="board"></div>
             <p class="nilai-kurang-x-label"></p>
             <p class="jumlah-node-label"></p>
             <p class="waktu-eksekusi-label"></p>
