--- a/src/static/styles/stylesheet.css
+++ b/src/static/styles/stylesheet.css
@@ -1,10 +1,46 @@
+/* GLOBAL VARIABLE */
 html, body {
     padding: 0;
     margin: 0;
     padding-top: 8vh;
     background: #222;
-    color: #111;
+    color: #feffff;
+    font-size: 100%;
+    font-family: 'Helvetica', sans-serif;
+    letter-spacing: 1px;
 }
+
+button {
+    cursor: pointer;
+}
+
+/* HEADER */
+
+header {
+    position: fixed;
+    height: 60px;
+    top: 0;
+    width: 100%;
+    background-color: #111111;
+    border-top: 5px solid #111111;
+    border-bottom: 5px solid #111111;
+    display: flex;
+    flex-direction: row;
+}
+
+.header-logo {
+    margin-left: 20px;
+    line-height: 90px;
+}
+
+.header-title {
+    font-size: 20px;
+    margin-left: 10px;
+    margin-top: 20px;
+    font-weight: 600;
+}
+
+/* BOARD */
 
 .txt {
     color: #fff;
@@ -37,4 +73,19 @@ html, body {
 .empty {
     background: #333;
     border: 1px solid #111
+}
+
+/* CONTAINER */
+.container {
+    padding: 0;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+}
+
+/* FOOTER */
+footer {
+    margin: 0 25px;
 }
