--- a/src/templates/view.html
+++ b/src/templates/view.html
@@ -22,7 +22,7 @@
             <button type="button" class="back-button">Back</button>
         </div>
         <footer>
-            <p class="footer-label">Made by 13520065 Rayhan Kinan Muhannad</p>
+            <p class="footer-label">Made by <a href="https://github.com/rayhankinan" target="_blank">13520065 Rayhan Kinan Muhannad</a></p>
         </footer>
     </body>
 </html>
