--- a/src/static/styles/stylesheet.css
+++ b/src/static/styles/stylesheet.css
@@ -14,6 +14,11 @@ button {
     cursor: pointer;
 }
 
+a {
+    text-decoration: none;
+    color: #feffff;
+}
+
 /* HEADER */
 
 header {
@@ -21,9 +26,9 @@ header {
     height: 60px;
     top: 0;
     width: 100%;
-    background-color: #111111;
-    border-top: 5px solid #111111;
-    border-bottom: 5px solid #111111;
+    background-color: #111;
+    border-top: 5px solid #111;
+    border-bottom: 5px solid #111;
     display: flex;
     flex-direction: row;
 }
@@ -43,7 +48,7 @@ header {
 /* BOARD */
 
 .txt {
-    color: #fff;
+    color: #feffff;
     text-align: center;
     font-size: 5vh;
 }
@@ -64,7 +69,7 @@ header {
     width: 7.25vh;
     line-height: 5vh;
     vertical-align: middle;
-    background: #fff;
+    background: #feffff;
     text-align: center;
     border-radius: 3px;
     cursor: pointer;
@@ -85,7 +90,39 @@ header {
     align-items: center;
 }
 
+.file-submit-button, .file-clear-button, .calculate-button, .back-button {
+    width: 120px;
+    height: 45px;
+    margin-top: 6px;
+    border-radius: 30px;
+    font-weight: 600;
+    background-color: #feffff;
+    color: #111;
+    cursor: pointer;
+    outline: none;
+    border: 2px solid #feffff;
+    font-size: 14px;
+}
+
+.file-submit-button:hover, .file-clear-button:hover, .calculate-button:hover, .back-button:hover {
+    background-color: #111;
+    color: #feffff;
+    transition: all 0.25s ease;
+}
+
+.file-input-button::file-selector-button {
+    cursor: pointer;
+}
+
 /* FOOTER */
 footer {
-    margin: 0 25px;
+    position: fixed;
+    padding: 10px 10px 0px 10px;
+    bottom: 0;
+    width: 100%;
+    height: 40px;
+}
+
+.footer-label {
+    margin: 0 20px;
 }
