--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -24,7 +24,7 @@
             <button type="button" class="calculate-button">Calculate</button>
         </div>
         <footer>
-            <p class="footer-label">Made by 13520065 Rayhan Kinan Muhannad</p>
+            <p class="footer-label">Made by <a href="https://github.com/rayhankinan" target="_blank">13520065 Rayhan Kinan Muhannad</a></p>
         </footer>
     </body>
 </html>
