Integrate with pyqt

--- a/src/templates/view.html
+++ b/src/templates/view.html
@@ -11,7 +11,6 @@
     </head>
     <body>
         <header>
-            <img src="{{ url_for('static', filename='images/logo.png') }}" class="header-logo">
             <h1 class="header-title">15 Puzzle Solver</h1>
         </header>
         <div class="board"></div>
@@ -22,7 +21,7 @@
             <button type="button" class="back-button">Back</button>
         </div>
         <footer>
-            <p class="footer-label">Made by <a href="https://github.com/rayhankinan" target="_blank">13520065 Rayhan Kinan Muhannad</a></p>
+            <p class="footer-label">Made by 13520065 Rayhan Kinan Muhannad</p>
         </footer>
     </body>
 </html>
