--- a/src/static/styles/stylesheet.css
+++ b/src/static/styles/stylesheet.css
@@ -104,6 +104,13 @@ header {
     cursor: pointer;
 }
 
+.loading-gif {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+    height: 50%;
+}
 /* FOOTER */
 footer {
     position: fixed;
