Revert "Bug fixing"
This reverts commit a2fcbfcd59d9c74ca5ae5cf298e7ef59fed4df73.

--- a/src/templates/view.html
+++ b/src/templates/view.html
@@ -20,6 +20,7 @@
             <p class="nilai-kurang-x-label"></p>
             <p class="jumlah-node-label"></p>
             <p class="waktu-eksekusi-label"></p>
+            <button type="button" class="back-button">Back</button>
         </div>
         <footer>
             <p class="footer-label">Made by 13520065 Rayhan Kinan Muhannad</p>
