--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -19,6 +19,7 @@
                 <input type="file" name="file" class="file-input-button" accept=".txt" required>
                 <button type="submit" class="file-submit-button">Upload</button>
             </form>
+            <button type="button" class="file-clear-button">Clear</button>
             <button type="button" class="calculate-button">Calculate</button>
         </div>
         <footer>
